test/source/carehub/main/default/objects/SyntilioEvent__c/SyntilioEvent__c.object-meta.xml
<CustomObject>
    <label>Syntilio Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syntilio Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>