test/source/carehub/main/default/objects/SyntilioEvent__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Name</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Syntilio Events</relationshipLabel>
    <relationshipName>SyntilioEvents</relationshipName>
    <type>Lookup</type>
</CustomField>