test/source/carehub/main/default/objects/SyntilioEvent__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Name</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Syntilio Events</relationshipLabel>
    <relationshipName>SyntilioEvents</relationshipName>
    <type>Lookup</type>
</CustomField>