test/source/carehub/main/default/objects/SyntilioEvent__c/fields/EventCode__c.field-meta.xml
<CustomField>
    <fullName>EventCode__c</fullName>
    <label>EventCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>