test/source/carehub/main/default/objects/SyntilioEvent__c/fields/EventId__c.field-meta.xml
<CustomField>
    <fullName>EventId__c</fullName>
    <label>Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>