test/source/carehub/main/default/objects/SyntilioEvent__c/fields/ParentAsset__c.field-meta.xml
<CustomField>
    <fullName>ParentAsset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Asset Name</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Syntilio Events (Parent Asset)</relationshipLabel>
    <relationshipName>SyntilioEventsParentAsset</relationshipName>
    <type>Lookup</type>
</CustomField>