test/source/carehub/main/default/objects/SyntilioEvent__c/fields/TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>